update CSS to prevent keyword/json-names word-wrapping in tabulated data

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -859,3 +859,8 @@ body.race-player main {
 .tab-content h4 {
   margin-left: 1rem;
 }
+
+.keyword code {
+  overflow-wrap:normal;
+  white-space:nowrap;
+}
